--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -44,12 +44,14 @@
       </div>
 
       <button
-        class="btn btn-sm btn-warning mt-1"
+        class="btn btn-sm btn-warning mt-2 mb-2"
         [disabled]="!fbFormGroup.valid"
         (click)="loginProcessHere()"
       >
         Login Here
       </button>
+
+      <a routerLink="/register">Register Here</a>
     </div>
   </div>
 </div>
