--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
 <p>home works!</p>
+
+<a routerLink="/home/">Personal </a>
+<a routerLink="/home/education">Education</a>
+<a routerLink="/home/contact-us">Contact Us</a>
+
+<button (click)="processLogout()">Log Out</button>
+
+<router-outlet></router-outlet>
