--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,12 @@
 <div class="container-fluid">
   <div class="row bg-warning" style="height: 55px">
-    <div class="col d-flex align-items-center">Orange App</div>
+    <div class="col d-flex align-items-center">
+      <fa-icon
+        [icon]="faAirFreshener"
+        style="font-size: 28px; margin-right: 8px"
+      ></fa-icon>
+      Orange App
+    </div>
     <div class="col d-flex justify-content-end align-items-center">
       <a class="btn btn-outline-light mr-1" routerLink="/home/">Personal</a>
       <a class="btn btn-outline-light mr-1" routerLink="/home/education">
@@ -16,11 +22,5 @@
     </div>
   </div>
 </div>
-
-<a routerLink="/home/">Personal </a>
-<a routerLink="/home/education">Education</a>
-<a routerLink="/home/contact-us">Contact Us</a>
-
-<button (click)="processLogout()">Log Out</button>
 
 <router-outlet></router-outlet>
