--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row bg-warning" style="height: 55px">
+  <div class="row bg-warning sticky-top" style="height: 55px">
     <div class="col d-flex align-items-center">
       <fa-icon
         [icon]="faAirFreshener"
@@ -21,6 +21,6 @@
       </button>
     </div>
   </div>
-</div>
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
