working.with.modal.

--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-4 my-2" *ngFor="let item of list">
-      <h5>About</h5>
+    <div class="col-4 my-3" *ngFor="let item of list">
+      <h5>{{ item.title }}</h5>
       <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempore
         neque dolore excepturi. Illo quisquam itaque possimus, veniam sunt,
@@ -13,6 +13,12 @@
         optio soluta aspernatur? Ducimus inventore est quod sequi molestiae.
         Amet temporibus omnis
       </div>
+      <button
+        class="btn btn-outline-secondary"
+        (click)="showDetailsModal(item)"
+      >
+        Show Details
+      </button>
     </div>
   </div>
 </div>
