--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,1 +1,17 @@
-<p>contact-us works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <div class="alert alert-warning" role="alert">
+        This is my perosnal info
+      </div>
+      <app-personal-info></app-personal-info>
+    </div>
+
+    <div class="col-6">
+      <div class="alert alert-warning" role="alert">
+        This is my perosnal info
+      </div>
+      <app-education></app-education>
+    </div>
+  </div>
+</div>
