--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,1 +1,11 @@
-<p>education works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-3 my-3" style="height: 200px" *ngFor="let item of list">
+      <img
+        [src]="item.img"
+        alt=""
+        style="height: 100%; width: 100%; object-fit: cover"
+      />
+    </div>
+  </div>
+</div>
