--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -1,24 +1,26 @@
 <div class="container">
   <div class="row">
-    <div class="col-4 my-3" *ngFor="let item of list">
-      <h5>{{ item.title }}</h5>
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempore
-        neque dolore excepturi. Illo quisquam itaque possimus, veniam sunt,
-        perferendis necessitatibus ut, in temporibus veritatis dolorum quidem
-        nesciunt eos corporis amet dignissimos maxime accusamus assumenda?
-        Architecto harum voluptates, asperiores dolorem vel consequatur ipsum?
-        Quas inventore architecto vitae laudantium maiores officiis doloribus
-        esse harum, repellendus dolor vero. Ab quaerat, sunt error consectetur
-        optio soluta aspernatur? Ducimus inventore est quod sequi molestiae.
-        Amet temporibus omnis
+    <ng-container *ngFor="let item of list">
+      <div class="col-4 my-3" *ngIf="item.show">
+        <h5>{{ item.title }}</h5>
+        <div>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempore
+          neque dolore excepturi. Illo quisquam itaque possimus, veniam sunt,
+          perferendis necessitatibus ut, in temporibus veritatis dolorum quidem
+          nesciunt eos corporis amet dignissimos maxime accusamus assumenda?
+          Architecto harum voluptates, asperiores dolorem vel consequatur ipsum?
+          Quas inventore architecto vitae laudantium maiores officiis doloribus
+          esse harum, repellendus dolor vero. Ab quaerat, sunt error consectetur
+          optio soluta aspernatur? Ducimus inventore est quod sequi molestiae.
+          Amet temporibus omnis
+        </div>
+        <button
+          class="btn btn-outline-secondary"
+          (click)="showDetailsModal(item)"
+        >
+          Show Details
+        </button>
       </div>
-      <button
-        class="btn btn-outline-secondary"
-        (click)="showDetailsModal(item)"
-      >
-        Show Details
-      </button>
-    </div>
+    </ng-container>
   </div>
 </div>
