--- a/src/app/details-modal/details-modal.component.html
+++ b/src/app/details-modal/details-modal.component.html
@@ -9,14 +9,8 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
-<div class="modal-body">
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem assumenda
-    nulla, unde hic a earum dolorum mollitia et debitis aspernatur inventore aut
-    adipisci, nemo rem similique minima id cum soluta consequuntur vero corrupti
-    possimus voluptate nostrum. Numquam tenetur natus consequuntur ducimus, ea
-    explicabo nulla minima, corporis necessitatibus molestias, sequi soluta.
-  </p>
+<div class="modal-body p-0">
+  <img src="assets/me.jpg" alt="" style="width: 100%; height: 100%" />
 </div>
 <div class="modal-footer">
   <button
